# JustAnotherWebsocketServer

./: Build.ps1  README.md  docker-compose.yml
.github/workflows/: docker-images.yml
Server/: Cargo.toml
Server/public/: default.js  main.js
Server/src/: main.rs  ws.rs
